<resources>
    <string name="app_name">OrgInt</string>
    <string name="menu_sort">Sort</string>
    <string name="menu_today">Today</string>
    <string name="menu_interests">Interests</string>
    <string name="menu_item_notification">Notifications</string>
    <string name="view_navigation_open">Open</string>
    <string name="view_navigation_close">Close</string>
    <string name="menu_item_settings">Settings</string>
    <string name="home">Home</string>
    <string name="notifications">Notifications</string>
    <string name="settings">Settings</string>
    <string name="organizer">Organizer</string>

    <string name="menu_events">Events</string>
    <string name="drawer_menu_submenu_title">Events</string>

    <!-- Tab names -->
    <string name="tab_shedules_name">Shedules</string>
    <string name="tab_links_name">Links</string>
    <string name="tab_planing_name">Planing</string>

    <!-- Strings related to Settings -->

    <string name="title_activity_settings">Settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>


    <string name="pref_title_use_notifications">Use notifications</string>
    <string name="pref_title_notify_time">Notify with approximation</string>
    <string name="pref_title_vibrate">Vibrate when notify</string>

    <string-array name="pref_notify_left_titles">
        <item>1 hour</item>
        <item>1 day</item>
        <item>1 week</item>
    </string-array>
    <string-array name="pref_notify_left_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Strings related to Adding page -->

    <string name="title_activity_adding">Adding</string>

    <string name="title_add">Task Title</string>
    <string name="sub_task_title">Sub task Title</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="save_adding">SAVE</string>

    <string-array name="categories_array">
        <item>Urgent - Important</item>
        <item>Urgent - Not Important</item>
        <item>Not Urgent - Important</item>
        <item>Not Urgent - Not Important</item>
    </string-array>

    <string-array name="day_array">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>

    <string name="title_comment">Comment</string>

    <string name="adding_page_date_title">Date</string>
    <string name="adding_page_time_title">Time</string>
    <string name="adding_page_interest_title">Interest</string>
    <string name="adding_page_interest_mock">Study</string>
    <string name="adding_page_sub_tasks_title">Sub Tasks</string>
    <string name="adding_page_add_sub_task_title">Add sub task</string>

    <!-- Strings related to Interests page -->

    <string name="title_activity_interests">Interests</string>
    <string name="interest_importance">Important</string>
    <string name="add_title_interest">Interest title</string>

    <!-- Strings related to Schedule page -->

    <string name="title_activity_schedule">Schedule</string>


    <!-- Strings related to Event page -->

    <string name="title_activity_event">Event</string>

    <string name="sub_task_content">null</string>

    <!-- ToDo card -->
    <string name="todo_card_mock_type">ToDo</string>

    <string name="todo_card_mock_title">Buy stuff</string>
    <string name="todo_card_mock_interest_type">Study</string>
    <string name="todo_card_mock_time">10:23</string>
    <string name="todo_card_mock_date">June 9, 2016</string>
    <string name="todo_card_mock_sub_tasks_count">0/3</string>
    <string name="todo_card_mock_sub_tasks_title">Sub Tasks</string>
    <string name="todo_card_mock_comment_title">Comment</string>
    <string name="todo_card_mock_comment_contain">Looooooooooooooool</string>
    <string name="todo_card_comment_count_mock">0</string>
    <string name="todo_card_mock_importance_title">Importance</string>
    <string name="todo_card_mock_importance_contain">Important</string>
    <string name="todo_card_mock_importance_value">70%</string>

    <string name="todo_card_mock_duration_title">Duration</string>
    <string name="todo_card_mock_start_time_title">Start Time</string>
    <string name="todo_card_mock_end_time_title">End Time</string>
    <string name="todo_card_mock_duration_time_title">Duration</string>
    <string name="todo_card_mock_start_time_value">10:23</string>
    <string name="todo_card_mock_end_time_value">11:23</string>
    <string name="todo_card_mock_duration_time_value">1 hour</string>

    <!-- Work task card -->
    <string name="work_card_mock_type">Work Task</string>

    <string name="work_task_card_mock_title">Make Database</string>
    <string name="work_task_card_mock_type">Work Task</string>
    <string name="work_task_card_mock_date_time">June 16, 10:30 am</string>
    <string name="work_task_card_comment_count_mock">0</string>
    <string name="work_task_card_mock_sub_tasks_count">0/3</string>
    <string name="work_task_card_mock_sub_tasks_title">Sub tasks</string>
    <string name="work_task_card_mock_comment_title">Comment</string>
    <string name="work_task_card_mock_comment_contain">Loool</string>
    <string name="work_task_card_mock_interest_title">Interest</string>
    <string name="work_task_card_mock_interest_contain">Study</string>

    <!-- Birthday card -->
    <string name="birthday_card_mock_title">Congratulate someone</string>
    <string name="birthday_card_mock_type">Birthday</string>
    <string name="birthday_card_mock_date_time">June 19, 19:30 pm</string>
    <string name="birthday_card_comment_count_mock">0</string>
    <string name="birthday_card_mock_sub_tasks_count">0/3</string>
    <string name="birthday_card_mock_sub_tasks_title">Sub tasks</string>
    <string name="birthday_card_mock_comment_title">Comment</string>
    <string name="birthday_card_mock_comment_contain">Loool</string>
    <string name="birthday_card_mock_interest_title">Interest</string>
    <string name="birthday_card_mock_interest_contain">Friends</string>

    <!-- Planning card -->
    <string name="planning_card_mock_title">Urgent Important</string>


</resources>
