<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
<group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home"
            android:checked="true"/>

        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_notification"
            android:title="@string/notifications" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />



        <item android:title="@string/drawer_menu_submenu_title">
                <menu>
                        <item
                            android:id="@+id/todo_page"
                            android:icon="@drawable/ic_todo"
                            android:title="@string/todo_card_mock_type"/>

                        <item
                            android:id="@+id/work_tasks_page"
                            android:icon="@drawable/ic_work_task"
                            android:title="@string/work_card_mock_type"/>

                        <item
                            android:id="@+id/birthday_page"
                            android:icon="@drawable/ic_birthday"
                            android:title="@string/birthday_card_mock_type"/>
                </menu>
        </item>

</group>



</menu>