<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


        <item android:id="@+id/sort"
            android:title="@string/menu_sort"
            android:orderInCategory="3"
            android:icon="@drawable/ic_sort"
            app:showAsAction="ifRoom" />

        <item android:id="@+id/today"
            android:title="@string/menu_today"
            android:orderInCategory="2"
            android:icon="@drawable/ic_today"
            app:showAsAction="ifRoom" />

        <item android:id="@+id/interests"
            android:title="@string/menu_interests"
            android:orderInCategory="1"
            android:icon="@drawable/ic_interest"
            app:showAsAction="ifRoom" />

</menu>