<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_vertical_margin">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/MyCardStyle"
        android:id="@+id/cardView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            android:id="@+id/day_name_and_type_lay"

            android:paddingLeft="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_horizontal_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/todo_task"
                android:text="@string/todo_card_mock_title"
                android:textSize="30sp"
                android:textColor="@color/colorNotificationText"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/interest_type"
                android:text="@string/todo_card_mock_interest_type"
                android:textSize="18sp"
                android:textColor="@color/colorUICategory"/>

            <RelativeLayout
                android:id="@+id/date_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/todo_time"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:text="@string/todo_card_mock_time"
                    android:textSize="30sp"
                    android:textColor="@color/colorGrey"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/todo_date"
                    android:text="@string/todo_card_mock_date"
                    android:textSize="18sp"
                    android:textColor="@color/colorGrey"
                    android:paddingTop="9dp"
                    android:layout_alignTop="@+id/todo_time"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true" />

            </RelativeLayout>



        </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorGrey" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            android:id="@+id/sub_tasks_counter_lay"

            android:paddingLeft="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_horizontal_margin"

           android:visibility="gone">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/comment_icon"
                android:layout_marginTop="3dp"
                android:background="@drawable/ic_comment" />

            <TextView
                android:id="@+id/comment_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:layout_marginLeft="27dp"
                android:layout_alignLeft="@+id/comment_icon"
                android:layout_alignStart="@+id/comment_icon"
                android:text ="@string/todo_card_comment_count_mock"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/sub_tasks_icon"
                android:background="@drawable/ic_sub_tasks_empty"
              android:layout_centerVertical="true"
                android:layout_marginLeft="30dp"
                android:layout_alignLeft="@+id/comment_count"
                android:layout_alignStart="@+id/comment_count" />

            <TextView
                android:id="@+id/sub_tasks_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:layout_marginLeft="27dp"
                android:layout_alignLeft="@+id/sub_tasks_icon"
                android:layout_alignStart="@+id/sub_tasks_icon"
                android:text ="@string/todo_card_mock_sub_tasks_count"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/interest_icon"
                android:background="@drawable/ic_interest_card"
                android:layout_centerVertical="true"
                android:layout_marginLeft="40dp"
                android:layout_alignLeft="@+id/sub_tasks_count"
                android:layout_alignStart="@+id/sub_tasks_count" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/duration_icon"
                android:background="@drawable/duration"
                android:layout_centerVertical="true"
                android:layout_marginLeft="40dp"
                android:layout_alignLeft="@+id/interest_icon"
                android:layout_alignStart="@+id/interest_icon" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/sub_tasks_expand"
                android:background="@drawable/ic_expand"
                android:layout_alignParentRight="true" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"

                android:id="@+id/sub_tasks_and_coments_and_interest_lay"

                android:paddingLeft="@dimen/activity_vertical_margin"
                android:paddingRight="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_horizontal_margin"

         >

                <TextView
                    android:id="@+id/sub_tasks_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text ="@string/todo_card_mock_sub_tasks_title"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"

                    android:id="@+id/sub_tasks_layout">



                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"

                    android:id="@+id/coments_layout">

                    <View
                        android:id="@+id/divider"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="@dimen/activity_vertical_margin"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorGrey" />

                    <TextView
                        android:id="@+id/coments_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:text ="@string/todo_card_mock_comment_title"/>

                    <TextView
                        android:id="@+id/coment"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        android:textSize="14sp"
                        android:textColor="@color/colorGrey"
                        android:text ="@string/todo_card_mock_comment_contain"/>


                    </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"

                    android:id="@+id/interests_layout">

                    <View
                        android:id="@+id/divider_com_int"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="@dimen/activity_vertical_margin"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorGrey" />

                    <TextView
                        android:id="@+id/interest_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:text ="@string/todo_card_mock_importance_title"/>

                    <TextView
                        android:id="@+id/importance"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        android:textSize="14sp"
                        android:textColor="@color/colorGrey"
                        android:text ="@string/todo_card_mock_importance_contain"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"

                        android:paddingTop="@dimen/activity_horizontal_margin"

                        android:id="@+id/importance_layout">

                        <TextView
                            android:id="@+id/importance_value"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:text ="@string/todo_card_mock_importance_value"
                            android:layout_gravity="right" />

                        <View
                            android:id="@+id/importance_bar_background"
                            android:layout_width="match_parent"
                            android:layout_height="3dp"
                            android:background="@color/colorNotificationText"
                            android:visibility="gone"/>

                    <View
                        android:id="@+id/importance_bar"
                        android:layout_width="294dp"
                        android:layout_height="3dp"
                        android:background="@color/colorGrey" />

                    </LinearLayout>

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"

                    android:id="@+id/duration_layout">

                    <View
                        android:id="@+id/divider_duration"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="@dimen/activity_vertical_margin"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorGrey" />

                    <TextView
                        android:id="@+id/duration_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:text ="@string/todo_card_mock_duration_title"/>

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/start_time"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingTop="10dp"
                            android:textSize="14sp"
                            android:textColor="@color/colorGrey"
                            android:text ="@string/todo_card_mock_start_time_title"/>

                        <TextView
                            android:id="@+id/start_time_value"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingTop="10dp"
                            android:textSize="14sp"
                            android:textColor="@color/colorGrey"
                            android:text ="@string/todo_card_mock_start_time_value"
                            android:layout_alignParentTop="true"
                            android:layout_toRightOf="@+id/start_time"
                            android:layout_toEndOf="@+id/start_time"
                            android:layout_marginLeft="70dp"
                            android:layout_marginStart="70dp" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/end_time"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingTop="10dp"
                            android:textSize="14sp"
                            android:textColor="@color/colorGrey"
                            android:text ="@string/todo_card_mock_end_time_title"/>

                        <TextView
                            android:id="@+id/end_value"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingTop="10dp"
                            android:textSize="14sp"
                            android:textColor="@color/colorGrey"
                            android:text ="@string/todo_card_mock_end_time_value"
                            android:layout_alignParentTop="true"
                            android:layout_toRightOf="@+id/end_time"
                            android:layout_toEndOf="@+id/end_time"
                            android:layout_marginLeft="77dp"
                            android:layout_marginStart="77dp" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/duration_time"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingTop="10dp"
                            android:textSize="14sp"
                            android:textColor="@color/colorGrey"
                            android:text ="@string/todo_card_mock_duration_time_title"/>

                        <TextView
                            android:id="@+id/duration_time_value"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingTop="10dp"
                            android:textSize="14sp"
                            android:textColor="@color/colorGrey"
                            android:text ="@string/todo_card_mock_duration_time_value"
                            android:layout_alignParentTop="true"
                            android:layout_toRightOf="@+id/duration_time"
                            android:layout_toEndOf="@+id/duration_time"
                            android:layout_marginLeft="79dp"
                            android:layout_marginStart="79dp" />

                    </RelativeLayout>




                </LinearLayout>


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/activity_horizontal_margin">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/sub_tasks_collaps"
                    android:background="@drawable/ic_collapse"
                    android:layout_alignParentRight="true" />

                </RelativeLayout>


            </LinearLayout>



        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>